<resources>
    <string name="app_name">Выставочный зал</string>
    <string name="private_office">Личный кабинет</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="forgetPassword">Забыл пароль</string>
    <string name="goIn">Войти</string>
    <string name="information_on_museum">Информация о музее</string>
    <string name="exhibits">Экспонаты</string>
    <string name="update_info_about_exhibition">Обновить информацию о музее</string>
    <string name="create_exhibition">Создать выставку</string>
    <string name="exhibitions">Выставки</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="id_cod">Идентификационный код</string>
    <string name="reg_museum">Регистрация музея</string>
    <string name="registration">Зарегистрировать</string>
    <string name="reg_yourself">Регистрация</string>
    <string name="registration_yourself">Зарегистрироваться</string>
    <string name="_600_20_https_www_culture_ru_materials_38436_iisus_dolzhen_byt_odin_sovershenno">«Всемирный сюжет» основан на первой главе Евангелия от Иоанна. В Италии, копируя «Сотворение человека» Микеланджело, художник увлекся «теорией». Читая Новый Завет, написал «Явление Христа Марии Магдалине», сделав первый шаг к масштабному полотну о приходе Мессии. Государственная Третьяковская галерея Лекция: «Русский гений на пути к вечности» 600 набросков. Александр Иванов искал образы к своей картине по всей Италии: в синагогах и церквях. Внешней красоте натурщиков предпочитал глубину чувств, что проступала на лицах именно в храмах. Палестинский пейзаж заменили пустоши в окрестностях Рима, где часами просиживал художник. 20-летний труд русского живописца был окутан завесой тайны. Мастерская закрыта для публики. «Иванов… уже давно умер для всего остального мира, кроме своей работы», - писал Николай Гоголь. Именно благодаря его письмам в России узнали о создании картины. [Источник Культура.РФ: https://www.culture.ru/materials/38436/iisus-dolzhen-byt-odin-sovershenno ]</string>
    <string name="description"> Описание</string>
    <string name="update_exhibition">Обновить выставку</string>
    <string name="choose_image">Выбрать фото</string>
    <string name="exhibition_description">Описание</string>
    <string name="exhibition_dates">Дата проведения</string>
    <string name="exhibition_virtual">Виртуальная выставка</string>
    <string name="update">Обновить</string>

    <string name="favorites">Избранное</string>
    <string name="home_page">дом</string>
     <string name="logout">Выйти</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="add_museum">Добавить музей</string>

    <string name="all_museums">Все музеи</string>
    <string name="empty_museum_exhibits">Здесь будут экспонаты Вашего музея \n \n Добавить новый экспонтат можно в разделе выставокб кликнув на нужную выставку</string>
    <string name="empty_exhibitions_museum">Здесь будут выставки Вашего музея \n \n Добавить новую выставку можно во втором разделе</string>
    <string name="address">Адрес</string>
    <string name="date_of_create">Дата создания</string>
    <string name="new_exhibition">Новая выставка</string>
    <string name="create">Создать</string>
    <string name="add">Добавить</string>
    <string name="new_exhibit">Новый экспонат</string>
    <string name="create_museum">Создать музей</string>
    <string name="date_of_create_with_symb">Дата создания:</string>
    <string name="delete_museum">Удалить музей</string>
    <string name="owner">Владелец:</string>
    <string name="register">Зарегистрироваться</string>
    <string name="for_museum_owner">Представителю музея</string>
    <string name="favorite_exhibitions_empty">Здесь будут находится Ваши избранные выставки</string>
    <string name="empty_favorite_exhibits">Здесь будут находится Ваши избранные экспонаты</string>
</resources>