<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_fr_main_museum"
        android:enabled="true"
        android:icon="@drawable/tab_museum_museum"
        android:title="@string/home_page" />
    <item
        android:id="@+id/menu_fr_create_exhbtn"
        android:enabled="true"
        android:icon="@drawable/tab_museum_create"
        android:title="@string/create_exhibition" />
    <item
        android:id="@+id/menu_fr_exhibitions"
        android:enabled="true"
        android:icon="@drawable/tab_museum_exbtn"
        android:title="@string/exhibitions" />
    <item
        android:id="@+id/menu_fr_exhibits"
        android:enabled="true"
        android:icon="@drawable/tab_museum_exhibit"
        android:title="@string/exhibits" />

</menu>