<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBeige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_museum">

        <LinearLayout

            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/darkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:autoSizeMaxTextSize="30sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/information_on_museum"
                android:textAlignment="gravity">

            </Button>
            <Button
                style="@style/darkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:autoSizeMaxTextSize="30sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/exhibitions"
                android:textAlignment="gravity">

            </Button>
            <Button
                style="@style/darkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:autoSizeMaxTextSize="30sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/create_exhibition"
                android:textAlignment="gravity">

            </Button>
            <Button
                style="@style/darkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:autoSizeMaxTextSize="30sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/update_info_about_exhibition"
                android:textAlignment="gravity">

            </Button>
            <Button

                style="@style/darkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:autoSizeMaxTextSize="30sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/exhibits"
                android:textAlignment="gravity">

            </Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>