<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/prata"
        android:gravity="center_horizontal"
        android:text="@string/reg_yourself"
        android:textAlignment="center"
        android:textColor="@color/darkBeige"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/registration_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/registration_login_text_field_boxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:hasClearButton="true"
                app:labelText="@string/login"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/registration_login_edtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/registration_first_pass_textFieldBoxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:hasClearButton="true"
                app:labelText="@string/password"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/registration_first_pass_edtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/registration_second_pass_textFBoxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:hasClearButton="true"
                app:labelText="@string/repeat_password"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/registration_second_pass_edtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0" />

    <RelativeLayout
        android:id="@+id/registration_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:theme="@style/roundBtn"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="matrix"
                android:src="@drawable/image_for_btn" />

            <ProgressBar
                android:id="@+id/registration_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="bottom"
                android:visibility="gone" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/registration_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:background="@color/glass"
            android:clickable="true"
            android:fontFamily="@font/prata"
             android:gravity="center"
            android:text="@string/registration_yourself"
            android:textAllCaps="false"
            android:textColor="@color/darkBeige" />
    </RelativeLayout>
</LinearLayout>

