<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/prata"
        android:gravity="center_horizontal"
        android:text="@string/reg_museum"
        android:textAlignment="center"
        android:textColor="@color/darkBeige"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/registration_museum_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/reg_museum_id_code_text_field_boxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:imeOptions="actionDone"
                app:hasClearButton="true"
                app:labelText="@string/id_cod"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_museum_id_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/reg_museum_login_text_field_boxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:imeOptions="actionDone"
                app:hasClearButton="true"
                app:labelText="@string/login"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_museum_login_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/reg_museum_first_pass_text_field_boxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:imeOptions="actionDone"
                app:hasClearButton="true"
                app:labelText="@string/password"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_museum_first_pass_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/reg_museum_second_pass_text_field_boxes"
                style="@style/textBoxOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:imeOptions="actionDone"
                app:hasClearButton="true"
                app:labelText="@string/repeat_password"
                app:manualValidateError="true">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_museum_second_pass_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/dark_dark_brown"
                    android:textSize="20sp"
                    app:helperText="@string/password" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0" />

    <RelativeLayout
        android:id="@+id/registration_museum_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:gravity="bottom"
        android:theme="@style/roundBtn"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="matrix"
                android:src="@drawable/image_for_btn" />

            <ProgressBar
                android:id="@+id/registration_museum_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="bottom"
                android:visibility="gone" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/reg_museum_reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:background="@color/glass"
            android:clickable="true"
            android:fontFamily="@font/prata"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/darkBeige" />
    </RelativeLayout>
</LinearLayout>