<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/brown"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prata"
                android:gravity="center_horizontal"
                android:text="@string/private_office"
                android:textAlignment="center"
                android:textColor="@color/darkBeige"
                android:textSize="30sp">

            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            style="@style/textBoxOuter"
            android:layout_width="match_parent"
            app:hasClearButton="true"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            app:helperText="@string/login"
            app:labelText="@string/login">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/authorization_log_text_view"
                android:textColor="@color/dark_dark_brown"
                android:textSize="20sp"
                android:imeOptions="actionDone"

                android:text="3333"
                app:helperText="@string/password" />
        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            style="@style/textBoxOuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hasClearButton="true"
            android:imeOptions="actionDone"
             app:helperText="@string/password"
            app:labelText="@string/password">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:inputType="textPassword"
                android:textColor="@color/dark_dark_brown"
                android:textSize="20sp"
                android:imeOptions="actionDone"

                android:text="1111"
                android:id="@+id/authorization_password_text_view"

                app:helperText="@string/password" />
        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/prata"
                android:gravity="center_vertical"
                android:text="@string/forgetPassword"
                android:textColor="@color/darkBeige"
                android:textSize="20sp"
                android:theme="@style/ClickableView">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:theme="@style/roundBtn">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="matrix"
                    android:src="@drawable/image_for_btn">

                </ImageView>
                <ProgressBar
                    android:id="@+id/authorization_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:layout_gravity="bottom"
                    />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/authorization_btn_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:background="@color/glass"
                android:clickable="true"
                android:fontFamily="@font/prata"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/goIn"
                android:textAllCaps="false"
                android:textColor="@color/darkBeige">

            </Button>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="vertical">


            <Button
                android:id="@+id/authorization_reg_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/glass"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"

                android:focusable="true"
                android:fontFamily="@font/prata"
                android:gravity="center_vertical"
                android:text="Зарегистрироваться"
                android:textAllCaps="false"
                android:textColor="@color/darkBeige"
                android:textSize="17sp"
                android:theme="@style/ClickableView">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authorization_reg_museum"
                android:foreground="?attr/selectableItemBackground"

                android:layout_gravity="center"
                android:background="@color/glass"
                android:clickable="true"

                android:focusable="true"
                android:fontFamily="@font/prata"
                android:gravity="center_vertical"
                android:text="Представителю музея"
                android:textAllCaps="false"
                android:textColor="@color/darkBeige"
                android:textSize="17sp"
                android:theme="@style/ClickableView">

            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>